# rnaseqde2

./: .gitignore  README.md  setup.cfg
config/: assets.yml  assets_ercc.yml  assets_gencode_refseq_noncode.yml
config/task/: align_hisat2.yml  align_hisat2_not_tuned.yml  align_hisat2_tuned.yml  align_star.yml  align_star_not_tuned.yml  align_tophat2.yml  align_tophat2_not_tuned.yml  align_tophat2_tuned.yml  de_cuffdiff.yml  quant_kallisto.yml  quant_rsem.yml  quant_stringtie.yml
rnaseqde/: __main__.py  sample_sheet_manager.py  utils.py
rnaseqde/task/: align_hisat2.py  align_star.py  align_tophat2.py  base.py  conv_any2raw.py  conv_any2raw_tximport.py  conv_cuffdiff2raw.py  conv_rsem2ebseq_mat.py  conv_rsem2mat.py  conv_sam2bam.py  conv_stringtie2raw.py  de_ballgown.py  de_cuffdiff.py  de_deseq2.py  de_ebseq.py  de_edger.py  de_sleuth.py  end.py  prep_prepde.py  qc_rseqc.py  quant_kallisto.py  quant_rsem.py  quant_salmon.py  quant_stringtie.py
rnaseqde/workflow/: check_outputs.py  fullset.py  fullset_ercc.py  hisat2_stringtie_ballgown.py  kallisto_sleuth.py  salmon_deseq2.py  star_rsem_ebseq.py  tophat2_cuffdiff.py
scripts/: conv_any2raw.R  conv_any2raw_tximport.R  conv_cuffdiff2raw.R  de_ballgown.R  de_deseq2.R  de_ebseq.R  de_edger.R  de_sleuth.R  gtf2bed.py  gtf2bed4igv.py  qc_rseqc.sh  rsem-for-ebseq-find-DE.R
tests/: debug_code.R  test.yml  test_config.py  test_task.py  test_utils.py
tests/datasets/: sample_sheet.txt
