[metadata]
name = rnaseqde
version = 0.1.0
description = RNA-seq DE
long_description = RNA-Seq DE analysis pipeline using Universal Grid Engine on NIG supercomputer
author = yh549848

[options]
install_requires =
    docopt
    inflection
    schema

[options.entry_points]
console_scripts =
    rnaseqde = rnaseqde.__main__:main
